syntax = "proto3";


option go_package = "grpcrest/proto;auth";

import "google/api/annotations.proto";

message DeleteRequest {
    string user_id = 1;
}

message DeleteResponse {
    string message = 1;
}

service DeleteAuthService {
    rpc DeleteAuth(DeleteRequest) returns (DeleteResponse);
}